--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Home</title>
+    <title>Vichai Xiong</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Welcome to Vichai Xiong's world!</h1>
     <p>This is my Home Page</p>
     <a href="products">Products Listing</a>
     <!-- Optional JavaScript; choose one of the two! -->
